# RdkInterDeviceManager

./: CONTRIBUTING.md  Makefile.am  NOTICE  README.md  configure.ac
config/: RdkInterDeviceManager.xml
source/: Makefile.am
source/InterDeviceManager/: Idm_TCP_apis.c  Idm_TCP_apis.h  Idm_call_back_apis.c  Idm_call_back_apis.h  Idm_data.c  Idm_data.h  Idm_heartbeat.c  Idm_heartbeat.h  Idm_mgr.c  Idm_msg_process.c  Idm_msg_process.h  Idm_rbus.c  Idm_rbus.h  Idm_utils.c  Idm_utils.h  Makefile.am  idm_ipc_client.c  idm_ipc_client.h  idm_ipc_server.c  idm_ipc_server.h  idm_recovery.sh  inter_device_manager_action.c  inter_device_manager_global.h  inter_device_manager_internal.h  inter_device_manager_main.c  inter_device_manager_messagebus_interface.c  inter_device_manager_messagebus_interface.h
source/TR-181/: Makefile.am
source/TR-181/middle_layer_src/: Makefile.am  inter_device_manager_dml.c  inter_device_manager_dml.h  inter_device_manager_plugin_main.c  inter_device_manager_plugin_main.h  inter_device_manager_plugin_main_apis.c  inter_device_manager_plugin_main_apis.h
source/test/: Makefile.am  RdkInterDeviceManagerTest.cpp  gtest_main.cpp
systemd_units/: RdkInterDeviceManager.service  ssl.conf
